<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:text="@string/description_name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_id" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_none" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_home_URL" />

    <TextView
        android:id="@+id/homeUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_defaultbranch" />

    <TextView
        android:id="@+id/defaultBranch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_code_language" />

    <TextView
        android:id="@+id/codeLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_size" />

    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_last_push" />

    <TextView
        android:id="@+id/lastPush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_open_issues" />

    <TextView
        android:id="@+id/openIssues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
